--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,4 +28,26 @@ services:
   service_b_1:
     image: service_ab:latest
     hostname: service_b_1
-  
+
+
+  grafana:
+    image: grafana/grafana:9.1.2
+    hostname: grafana
+    ports:
+      - "4000:3000"
+    volumes:
+      - "./config/grafana/datasources/all.yml:/etc/grafana/provisioning/datasources/all.yml"
+      - "./config/grafana/dashboards/all.yml:/etc/grafana/provisioning/dashboards/all.yml"
+      - "./config/grafana/krakend:/var/lib/grafana/dashboards/krakend"
+  influxdb:
+    image: influxdb:1.8.10
+    hostname: influxdb
+    environment:
+      - "INFLUXDB_DB=krakend"
+      - "INFLUXDB_USER=krakend-dev"
+      - "INFLUXDB_USER_PASSWORD=pas5w0rd"
+      - "INFLUXDB_ADMIN_USER=admin"
+      - "INFLUXDB_ADMIN_PASSWORD=supersecretpassword"
+    ports:
+      - "8086:8086"  
+
