--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,19 +16,32 @@ services:
       - service_a_1
       - service_a_2
       - service_b_1
+      - influxdb
+      - jaeger
 
   service_a_1:
     image: service_ab:latest
     hostname: service_a_1
+    environment:
+      - "SERVICE_NAME=CUST_API_1"
+      - "JAEGER_GRPC_URL=http://jaeger:4317"
+      - "OTEL_PROPAGATORS=b3,b3multi,tracecontext,baggage"
 
   service_a_2:
     image: service_ab:latest
     hostname: service_a_2
+    environment:
+      - "SERVICE_NAME=CUST_API_2"
+      - "JAEGER_GRPC_URL=http://jaeger:4317"
+      - "OTEL_PROPAGATORS=b3,b3multi,tracecontext,baggage"
 
   service_b_1:
     image: service_ab:latest
     hostname: service_b_1
-
+    environment:
+      - "SERVICE_NAME=AddressRegister"
+      - "JAEGER_GRPC_URL=http://jaeger:4317"
+      - "OTEL_PROPAGATORS=b3,b3multi,tracecontext,baggage"
 
   grafana:
     image: grafana/grafana:9.1.2
@@ -39,6 +52,7 @@ services:
       - "./config/grafana/datasources/all.yml:/etc/grafana/provisioning/datasources/all.yml"
       - "./config/grafana/dashboards/all.yml:/etc/grafana/provisioning/dashboards/all.yml"
       - "./config/grafana/krakend:/var/lib/grafana/dashboards/krakend"
+
   influxdb:
     image: influxdb:1.8.10
     hostname: influxdb
@@ -51,3 +65,18 @@ services:
     ports:
       - "8086:8086"  
 
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.47
+    hostname: jaeger
+    environment:
+      - "COLLECTOR_ZIPKIN_HOST_PORT=:9411"
+      - "COLLECTOR_OTLP_ENABLED=true"
+    ports:
+      - "16686:16686"      
+      - "4317:4317"
+      - "4318:4318"
+      - "14250:14250"
+      - "14268:14268"
+      - "14269:14269"
+      - "9411:9411"
